[gd_scene load_steps=2 format=3 uid="uid://dh4mrdgjpr13g"]

[ext_resource type="Script" path="res://screens/menu/menu.gd" id="1_n5ub0"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n5ub0")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="JoinLobbyDialog" type="ConfirmationDialog" parent="CenterContainer"]
title = "Join Lobby"
initial_position = 2
ok_button_text = "Connect"
cancel_button_text = "   Cancel   "

[node name="LobbyId" type="LineEdit" parent="CenterContainer/JoinLobbyDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 51.0
placeholder_text = "Lobby ID"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="ServerAddress" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "localhost"
placeholder_text = "Server"
alignment = 1

[node name="Connect" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="HBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Nickname" type="LineEdit" parent="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name"
max_length = 12

[node name="Join" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Create" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Create"

[connection signal="button_up" from="CenterContainer/VBoxContainer/HBoxContainer/Connect" to="." method="_on_connect_button_up"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/Create" to="." method="_on_create_button_up"]
